# BedrockRelay

./: .cursorrules  .env.example  .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  relay.js  turbo.json
apps/lazypacket/: .cursorrules  .gitignore  Cargo.toml  README.md  package.json  test_log_format.sh
apps/lazypacket/docs/: TESTING.md  protocol-decoding-summary.md  protocol-decoding.md  testing-protocol-decoding.md
apps/lazypacket/docs/tasks/: compare.md
apps/lazypacket/docs/tasks/finished/: compare.md  enhanced-packet-filtering.md
apps/lazypacket/src/: db.rs  lazypacket.rs  lib.rs  log_reader.rs  main.rs  packet_dump.rs  packet_logger.rs  protocol.rs  proxy.rs  session.rs  viewer.rs
apps/relay/: package.json  relay.js  vitest.config.js
apps/relay/.ddl/: 01_migrate_timestamp_to_ts.sql  02_migrate_add_tags_table.sql  init.sh  schema.sql
apps/relay/.ddl/seeds/: tags.sql
apps/relay/src/lib/db/: index.js  packets.js
apps/relay/src/lib/db/__tests__/: packets.test.js  sessions.test.js
docs/: performance.md
src/lib/db/: config.js  pool.js  sessions.js  shutdown.js
