[package]
name = "bedrock-rust-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
prost = "0.13"
flate2 = "1.0"  # Still needed for log_reader to read old compressed files
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27"
crossterm = "0.28"

[[bin]]
name = "viewer"
path = "src/viewer.rs"

[[bin]]
name = "log_reader"
path = "src/log_reader.rs"

[[bin]]
name = "packet_dump"
path = "src/packet_dump.rs"
