[package]
name = "lazypacket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27"
crossterm = "0.28"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-types = "0.2"
dotenvy = "0.15"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

[[bin]]
name = "lazypacket"
path = "src/lazypacket.rs"
